Create basic structure for serialization and LIN reading

--- a/src/Forest.UI/Views/InstallApplicationPage.xaml
+++ b/src/Forest.UI/Views/InstallApplicationPage.xaml
@@ -3,7 +3,10 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="{DynamicResource StringInstallApplication}">
 
-    <Grid>
-        
-    </Grid>
+    <StackPanel Orientation="Vertical"
+                Margin="20">
+
+        <TextBlock FontSize="18"
+                   Text="Verfügbare Anwendungen"/>
+    </StackPanel>
 </Page>
