--- a/src/Forest.UI/App.xaml
+++ b/src/Forest.UI/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Forest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainView.xaml">
+             Startup="Application_Startup">
 
     <Application.Resources>
         <ResourceDictionary>
