--- a/src/Forest.UI/Localization/Strings_en-US.xaml
+++ b/src/Forest.UI/Localization/Strings_en-US.xaml
@@ -5,15 +5,23 @@
     <String x:Key="StringAppTitle">Losch Installer</String>
     <String x:Key="StringStartPageTitle">Start</String>
 
+    <String x:Key="StringInvalidPackageMessage">The specified installer package is invalid.</String>
+
     <String x:Key="StringAbout">About Losch Installer</String>
     <String x:Key="StringAboutShort">About</String>
 
     <String x:Key="StringButtonClose">Close</String>
+    <String x:Key="StringButtonFinish">Finish</String>
     <String x:Key="StringButtonBack">Back</String>
+    <String x:Key="StringButtonNext">Next</String>
 
     <String x:Key="StringInstallApplication">Install application</String>
     <String x:Key="StringInstallApplicationDescription">Install a new Losch application</String>
     <String x:Key="StringLibrary">Library</String>
     <String x:Key="StringLibraryDescription">View your installed applications</String>
+
+    <String x:Key="StringFinishPageTitle">Installation complete</String>
+    <String x:Key="StringFinishPageBodyTextFallbackValue">The application was installed successfully.</String>
+    <String x:Key="StringFinishPageStartCheckBoxFallbackValue">Start application</String>
 
 </y:ResourceDictionary>
