Add resources for company logo

--- a/src/Forest.UI/App.xaml
+++ b/src/Forest.UI/App.xaml
@@ -12,6 +12,7 @@
                 
                 <ResourceDictionary Source="./Resources/Images.xaml"/>
                 <ResourceDictionary Source="./Resources/VSIconsLight.xaml"/>
+                <ResourceDictionary Source="./Resources/Logo.xaml"/>
 
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
