Add "splash screen" to LinUI

--- a/src/Forest.UI/Localization/Strings_de-DE.xaml
+++ b/src/Forest.UI/Localization/Strings_de-DE.xaml
@@ -28,4 +28,6 @@
     
 Fehlercode: {0}</String>
 
+    <String x:Key="StringSetupIsStarting">Setup wird gestartet...</String>
+
 </y:ResourceDictionary>
