--- a/src/Forest.UI/Localization/Strings_en-US.xaml
+++ b/src/Forest.UI/Localization/Strings_en-US.xaml
@@ -28,4 +28,6 @@
     
 Error code: {0}</String>
 
+    <String x:Key="StringSetupIsStarting">Setup is starting...</String>
+
 </y:ResourceDictionary>
