--- a/src/Forest.UI/Localization/Strings_de-DE.xaml
+++ b/src/Forest.UI/Localization/Strings_de-DE.xaml
@@ -16,9 +16,11 @@
     <String x:Key="StringButtonNext">Weiter</String>
 
     <String x:Key="StringInstallApplication">Anwendung installieren</String>
-    <String x:Key="StringInstallApplicationDescription">Eine neue Losch-Anwendung installieren</String>
+    <String x:Key="StringInstallApplicationDescription">Eine neue Anwendung installieren</String>
     <String x:Key="StringLibrary">Bibliothek</String>
-    <String x:Key="StringLibraryDescription">Eine Liste aller installierten Losch-Anwendungen anzeigen</String>
+    <String x:Key="StringLibraryDescription">Eine Liste aller installierten Anwendungen anzeigen</String>
+    <String x:Key="StringInstallPackage">Paket installieren</String>
+    <String x:Key="StringInstallPackageDescription">Lokale .LIN-Paketdatei installieren</String>
 
     <String x:Key="StringFinishPageTitle">Installation abgeschlossen</String>
     <String x:Key="StringFinishPageBodyTextFallbackValue">Die Anwendung wurde erfolgreich installiert.</String>
@@ -30,4 +32,5 @@ Fehlercode: {0}</String>
 
     <String x:Key="StringSetupIsStarting">Setup wird gestartet...</String>
 
+    <String x:Key="StringLinFileFilter">Installer-Paket (*.lin)|*.lin|Kompiliertes Installer-Paket (*.exe)|*.exe|Alle Dateien (*.*)|*.*</String>
 </y:ResourceDictionary>
