--- a/src/Forest.UI/Views/LibraryPage.xaml
+++ b/src/Forest.UI/Views/LibraryPage.xaml
@@ -1,9 +1,64 @@
 ﻿<Page x:Class="Forest.UI.Views.LibraryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:ui="clr-namespace:AdonisUI;assembly=AdonisUI"
+      xmlns:uie="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+      xmlns:vm="clr-namespace:Forest.UI.ViewModels"
       Title="{DynamicResource StringLibrary}">
 
+    <Page.DataContext>
+        <vm:LibraryViewModel/>
+    </Page.DataContext>
+
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Border Grid.Row="0"
+                BorderThickness="0"
+                Background="{DynamicResource {x:Static ui:Brushes.Layer0BackgroundBrush}}">
+
+            <Border.Effect>
+                <DropShadowEffect Direction="270"
+                      Opacity="1"
+                      RenderingBias="Quality"
+                      Color="#F0F0F0"/>
+            </Border.Effect>
+
+            <StackPanel Orientation="Horizontal">
+                <TextBox Width="150" Margin="5" Text="">
+                    <uie:WatermarkExtension.Watermark>
+                        <StackPanel Orientation="Horizontal">
+                            <ContentControl Content="{DynamicResource Search}"/>
+                            <TextBlock Margin="5,0,0,0" Text="{DynamicResource StringSearchPackages}"/>
+                        </StackPanel>
+                    </uie:WatermarkExtension.Watermark>
+                </TextBox>
+
+                <Rectangle Margin="5"
+                           Width="1"
+                           Fill="{DynamicResource {x:Static ui:Brushes.Layer1BorderBrush}}"/>
+
+                <Button Margin="5"
+                        x:Name="FilterButton"
+                        Content="{DynamicResource Filter}"
+                        Style="{DynamicResource {x:Static ui:Styles.AccentToolbarButton}}"
+                        ToolTip="{DynamicResource StringFilter}"
+                        Padding="0"
+                        Width="{Binding ElementName=FilterButton, Path=ActualHeight}"/>
+            </StackPanel>
+        </Border>
+
+        <ScrollViewer Grid.Row="1">
+            <ItemsControl HorizontalContentAlignment="Stretch" ItemsSource="{Binding Packages}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+        </ScrollViewer>
     </Grid>
 </Page>
