--- a/src/Forest.UI/Controls/TemplateButton.xaml
+++ b/src/Forest.UI/Controls/TemplateButton.xaml
@@ -18,15 +18,24 @@
         <ContentControl Grid.Column="0" Margin="{Binding IconMargin}" Content="{Binding Icon}" Height="{Binding IconSize}" Width="{Binding IconSize}" VerticalAlignment="Center" Visibility="{Binding IconVisibility}"/>
         <Grid Grid.Column="1" VerticalAlignment="Center" Margin="5">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock TextWrapping="Wrap" Grid.Row="0" Margin="0,0,40,0">
+            <TextBlock TextWrapping="Wrap" Grid.Row="1" Margin="0,0,40,0">
                 <Run FontFamily="Segoe UI Semibold" Text="{Binding MainText}"/>
                 <LineBreak/>
                 <Run Text="{Binding DescriptionText}"/>
             </TextBlock>
+
+            <ItemsControl ItemsSource="{Binding Badges}" Grid.Row="0" Margin="0,0,0,3" Visibility="{Binding BadgesVisibility}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
 
             <ItemsControl ItemsSource="{Binding TagElements}" Grid.Row="1" Margin="0,10" Visibility="{Binding TagsVisibility}">
                 <ItemsControl.ItemsPanel>
@@ -36,7 +45,7 @@
                 </ItemsControl.ItemsPanel>
             </ItemsControl>
 
-            <ToggleButton Visibility="{Binding FavoriteStarVisibility, FallbackValue=Collapsed}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" IsChecked="{Binding IsFavorite, Mode=TwoWay}">
+            <ToggleButton Grid.Row="1" Visibility="{Binding FavoriteStarVisibility, FallbackValue=Collapsed}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" IsChecked="{Binding IsFavorite, Mode=TwoWay}">
                 <ToggleButton.Style>
                     <Style TargetType="ToggleButton">
                         <Setter Property="Foreground" Value="{DynamicResource {x:Static ui:Brushes.ForegroundBrush}}"/>
