--- a/src/Forest.UI/Localization/Strings_en-US.xaml
+++ b/src/Forest.UI/Localization/Strings_en-US.xaml
@@ -46,4 +46,16 @@ Error code: {0}</String>
     <String x:Key="StringException">An exception occured. {0}</String>
     <String x:Key="StringPackageTitleFormat">{0} ({1})</String>
     <String x:Key="StringUnverified">Not verified</String>
+    <String x:Key="StringFilterPackages">Filter packages</String>
+    <String x:Key="StringSortBy">Sort by:</String>
+    <String x:Key="StringSortByPackageName">Package name</String>
+    <String x:Key="StringSortByPublisher">Publisher</String>
+    <String x:Key="StringSortByVersion">Version</String>
+    <String x:Key="StringSortAscending">Ascending</String>
+    <String x:Key="StringSortDescending">Descending</String>
+    <String x:Key="StringGroupBy">Group by:</String>
+    <String x:Key="StringGroupByNoGrouping">No grouping</String>
+    <String x:Key="StringGroupByPublisher">Publisher</String>
+    <String x:Key="StringGroupByTag">Tag</String>
+    <String x:Key="StringTags">Tags:</String>
 </y:ResourceDictionary>
