--- a/src/Forest.UI/Localization/Strings_en-US.xaml
+++ b/src/Forest.UI/Localization/Strings_en-US.xaml
@@ -58,4 +58,5 @@ Error code: {0}</String>
     <String x:Key="StringGroupByPublisher">Publisher</String>
     <String x:Key="StringGroupByTag">Tag</String>
     <String x:Key="StringTags">Tags:</String>
+    <String x:Key="StringInstallationDate">Installation date</String>
 </y:ResourceDictionary>
