--- a/src/Forest.UI/Controls/Badge.xaml
+++ b/src/Forest.UI/Controls/Badge.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="Forest.UI.Controls.Badge"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:ui="clr-namespace:AdonisUI;assembly=AdonisUI"
              x:Name="Root"
              DataContext="{Binding ElementName=Root}">
 
@@ -8,7 +9,27 @@
             BorderBrush="{Binding BorderBrush}"
             Background="{Binding BadgeBackground}"
             BorderThickness="1">
-        
-        <TextBlock Text="{Binding Text}" Foreground="{Binding Foreground}" Margin="5,3"/>
+
+        <Grid Margin="5,3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="0"
+                       Text="{Binding Text}"
+                       Foreground="{Binding Foreground}"
+                       VerticalAlignment="Center"/>
+
+            <Button Grid.Column="1"
+                    Content="{DynamicResource Close}"
+                    Margin="3,0,0,0"
+                    VerticalAlignment="Center"
+                    x:Name="CloseButton"
+                    Width="{Binding ElementName=CloseButton, Path=ActualHeight}"
+                    Padding="0"
+                    Style="{DynamicResource {x:Static ui:Styles.ToolbarButton}}"
+                    Visibility="{Binding CloseButtonVisibility, FallbackValue=Collapsed}"/>
+        </Grid>
     </Border>
 </UserControl>
