--- a/src/Forest.UI/Controls/LibraryFilter.xaml
+++ b/src/Forest.UI/Controls/LibraryFilter.xaml
@@ -35,7 +35,7 @@
         <ComboBox Grid.Row="1"
                   Grid.Column="1"
                   Margin="10,0,0,0"
-                  SelectedIndex="0"
+                  SelectedIndex="{Binding Sorting, Mode=TwoWay}"
                   VerticalAlignment="Center">
 
             <ComboBoxItem Content="{DynamicResource StringSortByPackageName}"/>
@@ -49,7 +49,10 @@
                       VerticalAlignment="Center"
                       Content="{DynamicResource SortAscending}"
                       Style="{DynamicResource {x:Static ui:Styles.ToolbarToggleButton}}"
-                      ToolTip="{DynamicResource StringSortAscending}"/>
+                      ToolTip="{DynamicResource StringSortAscending}"
+                      IsChecked="{Binding SortDirection, Mode=TwoWay}"
+                      Checked="ToggleButton_Checked"
+                      Unchecked="ToggleButton_Unchecked"/>
 
         <TextBlock Grid.Row="2"
                    Grid.Column="0"
@@ -61,7 +64,7 @@
                   Grid.Column="1"
                   VerticalAlignment="Center"
                   Margin="10,10,0,0"
-                  SelectedIndex="0">
+                  SelectedIndex="{Binding Grouping, Mode=TwoWay}">
 
             <ComboBoxItem Content="{DynamicResource StringGroupByNoGrouping}"/>
             <ComboBoxItem Content="{DynamicResource StringGroupByPublisher}"/>
