--- a/src/Forest.UI/Localization/Strings_de-DE.xaml
+++ b/src/Forest.UI/Localization/Strings_de-DE.xaml
@@ -58,4 +58,5 @@ Fehlercode: {0}</String>
     <String x:Key="StringGroupByPublisher">Herausgeber</String>
     <String x:Key="StringGroupByTag">Tag</String>
     <String x:Key="StringTags">Tags:</String>
+    <String x:Key="StringInstallationDate">Installationsdatum</String>
 </y:ResourceDictionary>
